# loupe

./: .editorconfig  .gitignore  .gitlab-ci.yml  .rustfmt.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NEWS  README.md  deny.toml  loupe.doap  meson.build  meson_options.txt
.gitlab/issue_templates/: Change.md  Default.md  Feature.md  Issue.md
build-aux/: cargo.sh  generate-news.py
build-aux/flatpak/: libadwaita-issue-597.patch  org.gnome.ImageViewer.Devel.json  org.gnome.Loupe.Devel.json
data/: gnome_image_viewer.gresource.xml  image-viewer.css  loupe.gresource.xml  meson.build  org.gnome.ImageViewer.appdata.xml.in.in  org.gnome.ImageViewer.desktop.in.in  org.gnome.ImageViewer.gschema.xml  org.gnome.ImageViewer.service.in  org.gnome.Loupe.appdata.xml.in.in  org.gnome.Loupe.desktop.in.in  org.gnome.Loupe.gschema.xml  org.gnome.Loupe.gschema.xml.in  org.gnome.Loupe.metainfo.xml.in.in  org.gnome.Loupe.service.in  style.css
data/gtk/: help_overlay.ui  image_page.ui  image_view.ui  print.ui  properties_view.ui  window.ui  zoom_to.ui
data/icons/: meson.build
data/resources/: edit.css  edit_crop.css  shortcuts-dialog.ui  style-dark.css  style-hc.css  style.css
data/resources/gtk/: help-overlay.ui
glycin/: Cargo.toml
glycin-crates/: Cargo.toml
glycin-crates/decoders/glycin-heif/: Cargo.toml
glycin-crates/decoders/glycin-image-rs/: Cargo.toml
glycin-crates/decoders/glycin-image-rs/src/: main.rs
glycin-crates/glycin/: Cargo.toml
glycin-crates/glycin-utils/: Cargo.toml
glycin-crates/glycin-utils/src/: image_rs.rs  lib.rs
glycin-crates/glycin/src/: api.rs  dbus.rs  icc.rs  lib.rs
glycin-decoders/glycin-image-rs/: Cargo.toml
glycin-decoders/glycin-image-rs/src/: main.rs
glycin-utils/: Cargo.toml
glycin-utils/src/: image_rs.rs  lib.rs
help/: LINGUAS  README.md  meson.build
help/C/: Makefile  image-properties.page  index.page  opening-images.page  sending-to-other-apps.page  supported-formats.page  trashing-images.page  viewing-images.page
help/C/duck/: image-properties.duck  index.duck  opening-images.duck  sending-to-other-apps.duck  supported-formats.duck  trashing-images.duck  viewing-images.duck
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/eu/: eu.po
help/fa/: fa.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/kk/: kk.po
help/ko/: ko.po
help/nl/: nl.po
help/pl/: pl.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sr/: sr.po
help/sv/: sv.po
help/tr/: tr.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
news.d/: README.md  previous
news.d/47.0/: fixed-wrong-image-shown-with-animations-disabled  fixed-zoom-center
news.d/47.1/: added-branding-colors  fixed-make-string-translatable  fixed-require-glycin-2.0.1-to-fix-svgz
news.d/47.2/: fixed-call-style-manager-too-early
news.d/47.4/: fixed-svg-print-preview-missing
news.d/47.alpha/: added-error-detail-dialog  added-save-rotation  changed-error-messages-nicer  changed-follow-style-guide  changed-print-api  changed-rework-shortcuts  changed-use-adw-about-dialog  changed-use-adw-alert-dialog  fixed-markup-in-properties
news.d/47.beta/: added-reload-action  changed-accent-colors-drag-and-drop  changed-make-unicode-escape-translatable  changed-no-longer-default-to-gl-renderer  changed-properties-widgets  changed-show-spinner-after-delay  changed-use-adw-spinner  changed-use-glycin-devel-detection  fixed-actions-available-on-error-page  fixed-dont-empty-animation-buffer  fixed-svg-dont-fail-on-additional-tails  fixed-zoom-into-image-center
news.d/47.beta.1/: fixed-hands-and-crashes-when-loading-large-images  fixed-opening-svgs-fails-outside-flatpak
news.d/47.rc/: fixed-avoid-flickering-when-reloading-image  fixed-dont-rewrite-image-for-0deg-rotation  fixed-rotating-image-might-not-follow-best-fit  fixed-window-can-open-with-overlaying-bottom-sheet
news.d/48.0/: fixed-edit-crop-pre-select-portrait-orientation
news.d/48.1/: fixed-dont-crash-on-window-close  fixed-editing-pre-rotated-images  fixed-print-empty-page  fixes-dont-crash-on-window-close  fixes-print-empty-page
po/: LINGUAS  POTFILES  POTFILES.in  ar.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  gl.po  he.po  hi.po  hu.po  ia.po  id.po  ie.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  meson.build  nb.po  ne.po  nl.po  (+22 more)
src/: about.rs  application.rs  config.rs  config.rs.in  decoder.rs  editing.rs  file_model.rs  i18n.rs  image_metadata.rs  lib.rs  main.rs  meson.build  metadata.rs  thumbnail.rs  util.rs  widgets.rs  window.rs  window.ui
src/decoder/: decoded.rs  formats.rs  mod.rs  tiling.rs
src/decoder/formats/: generic_image_rs.rs  glycin_proxy.rs  heif.rs  image_rs_other.rs  jpeg.rs  mod.rs  svg.rs
src/editing/: preview.rs
src/image_metadata/: gps.rs  mod.rs  obj.rs
src/metadata/: file.rs  format.rs  gps.rs  mod.rs
src/util/: gettext.rs  mod.rs  root.rs
src/widgets/: drag_overlay.rs  drag_overlay.ui  edit.rs  edit_window.rs  edit_window.ui  error_details.rs  error_details.ui  fullscreen_widget.rs  fullscreen_widget.ui  image.rs  image_page.rs  image_page.ui  image_view.rs  image_view.ui  image_window.rs  image_window.ui  mod.rs  print.rs  print.ui  print_preview.rs  properties_view.rs  properties_view.ui  shy_bin.rs  sliding_view.rs  window.rs  window.ui  window_content.rs  window_content.ui  window_edit.rs  window_edit.ui  window_image.rs  window_image.ui  window_title.rs  zoom_to.rs
src/widgets/edit/: crop.rs  crop.ui  crop_selection.rs  crop_selection.ui
src/widgets/image/: background_color.rs  drag.rs  editing.rs  guess_background_color.rs  input_handling.rs  loading.rs  metadata.rs  pan.rs  printing.rs  rendering.rs  rotation.rs  scrollable.rs  zoom.rs
src/widgets/image_window/: actions.rs  controls.rs
src/widgets/window_image/: actions.rs  controls.rs
src/window/: actions.rs  controls.rs
supply-chain/: audits.toml  config.toml
tests/: test.rs
(+56 files in other folders)
