[package]
name = "loupe"
version = "49.0.0"
edition = "2021"
rust-version = "1.85"
license = "GPL-3.0-or-later"

[profile.release]
lto = true
codegen-units = 1

[features]
x11 = ["ashpd/gtk4_x11"]

[dependencies]
adw = { package = "libadwaita", version = "0.8.0", features = ["v1_6"] }
anyhow = { version = "1.0.66" }
arc-swap = "1.6.0"
ashpd = { version = "0.12.0", default-features = false, features = [
    "gtk4_wayland",
    "async-std",
] }
async-channel = "2.1.0"
async-lock = "3.4.0"
cairo-rs = { version = "0.21.0", features = ["pdf"] }
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gettext-sys = { version = "0.22.5", features = ["gettext-system"] }
gio = { version = "0.21.0", features = ["v2_74"] }
glycin = { version = "3.0.0", features = ["gdk4", "unstable-config"] }
gtk = { package = "gtk4", version = "0.10.0", features = [
    "v4_14",
    "xml_validation",
] }
gufo = { version = "0.3.0", features = ["chrono", "all-image-formats"] }
gufo-common = { version = "1.0.0", features = ["serde"] }
gvdb-macros = "0.1.6"
indexmap = "2.0.0"
libc = "0.2.158"
libgweather = "4.4.0"
log = "0.4.17"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.3"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }
url = "2.3.1"
