[package]
name = "loupe"
version = "50.0.0"
edition = "2024"
rust-version = "1.92"
license = "GPL-3.0-or-later"

[profile.release]
lto = true
codegen-units = 1

[features]
x11 = ["ashpd/gtk4_x11"]

[dependencies]
adw = { package = "libadwaita", version = "0.9.0", features = ["v1_8"] }
anyhow = { version = "1.0.66" }
arc-swap = "1.6.0"
ashpd = { version = "0.13.0", default-features = false, features = [
    "gtk4_wayland",
    "async-io",
    "wallpaper",
] }
async-channel = "2.1.0"
async-lock = "3.4.0"
cairo-rs = { version = "0.22.0", features = ["pdf"] }
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
gettext-rs = { version = "0.7.0", features = ["gettext-system"] }
gettext-sys = { version = "0.26.0", features = ["gettext-system"] }
gio = { version = "0.22.0", features = ["v2_74"] }
glycin = { version = "3.1.0", features = ["gdk4", "unstable-config"] }
gtk = { package = "gtk4", version = "0.11.0", features = [
    "v4_14",
    "xml_validation",
] }
gufo = { version = "0.4.0", features = ["chrono", "all-image-formats"] }
gufo-exif = "0.4.0"
gufo-common = { version = "1.1.0", features = ["serde"] }
gvdb-macros = "0.1.6"
indexmap = "2.0.0"
libc = "0.2.158"
libgweather = "4.8.0"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "ansi",
    "env-filter",
    "fmt",
    "smallvec",
    "std",
] }
