option(
  'profile',
  type: 'combo',
  description: 'The build profiles for the application. Use development or ci for the .Devel app ID. ci also produces optimized bundles.',
  choices: [
    'release',
    'development',
    'ci',
  ],
  value: 'release'
)
option(
  'disable-glycin-sandbox',
  type: 'boolean',
  value: false,
  description: 'Disable sandboxing of image loaders in glycin. Only intended for development purposes.',
)