option(
  'profile',
  type: 'combo',
  description: 'The build profiles for the application. Use development or ci for the .Devel app ID. ci also produces optimized bundles.',
  choices: [
    'release',
    'development',
    'ci',
  ],
  value: 'release',
)
option(
  'x11',
  type: 'feature',
  description: 'Enable X11 specific features.',
)
