[workspace.package]
version = "0.0.1"
authors = ["Sophie Herold"]
description = "Sandboxed image rendering"
license = "LGPL-3.0-or-later"
homepage = "https://gitlab.gnome.org/GNOME/Incubator/loupe"
repository = "https://gitlab.gnome.org/GNOME/Incubator/loupe"
edition = "2021"
rust-version = "1.65.0"

[workspace]
members = [
    "glycin",
    "glycin-utils",
    "decoders/glycin-image-rs",
]
default-members = [
    "glycin",
    "glycin-utils",
]
