[package]
name = "glycin"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-or-later"

[dependencies]
async-std = "1.12.0"
gio = "0.17.9"
glib = "0.17.9"
zbus = "3.13.1"
glycin-utils = { path = "../glycin-utils/" }
memfd = "0.6.3"
memmap = { package = "memmap2", version = "0.6.0" }
gdk = { package = "gdk4", version = "0.6.3", features = ["v4_10"] }
gtk4 = "0.6.6"
nix = "0.26.2"
