sources = [
  'image-properties.page',
  'index.page',
  'opening-images.page',
  'sending-to-other-apps.page',
  'supported-formats.page',
  'trashing-images.page',
  'viewing-images.page',
]

media = [
  'figures' / 'edit-copy-symbolic.svg',
  'figures' / 'go-next-symbolic.svg',
  'figures' / 'go-previous-symbolic.svg',
  'figures' / 'help-about-symbolic.svg',
  'figures' / 'object-rotate-left-symbolic.svg',
  'figures' / 'object-rotate-right-symbolic.svg',
  'figures' / 'org.gnome.Loupe.svg',
  'figures' / 'user-trash-symbolic.svg',
  'figures' / 'view-fullscreen-symbolic.svg',
  'figures' / 'view-restore-symbolic.svg',
  'figures' / 'zoom-in-symbolic.svg',
  'figures' / 'zoom-out-symbolic.svg',
]

gnome.yelp(
  meson.project_name(),
  sources: sources,
  media: media,
)
