[package]
name = "glycin-image-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
zbus = "3.12.0"
glycin-utils = { path = "../../glycin-utils/" }
memfd = "0.6.3"
memmap = { package = "memmap2", version = "0.6.0" }
image = "0.24.6"
once_cell = "1.17.1"

