[package]
name = "glycin-image-rs"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-std = "1.12.0"
glycin-utils = { path = "../../glycin-utils/" }
image = "0.24.6"
